Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9214

Server miscalculates the number of XA-capable engines

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1(EOL)
    • 10.1.10
    • Plugins, XA
    • None
    • 10.1.10

    Description

      Apparently, 10.1 somehow wrongly counts the number of XA-capable engines. Here are some scenarios which make me think that:

      • start server with only one XA-capable engine, e.g. XtraDB;
      • see tc.log is created (already strange, it shouldn't do that, right?);
      • sigkill server;
      • start server with two XA-capable engines, e.g. XtraDB and TokuDB;
      • see the error message in the log:

        [ERROR] Recovery failed! You must enable exactly 2 storage engines that support two-phase commit protocol

        It should be 1, not 2, right?

      or

      • start server with two XA-capable engines, e.g. XtraDB and TokuDB;
      • see tc.log is created;
      • sigkill server;
      • start server without TokuDB;
      • see the error message in the log:

        [ERROR] Recovery failed! You must enable exactly 3 storage engines that support two-phase commit protocol

        It should be 2, not 3, right?

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3h
                  3h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.