MDEV-9214 Server miscalculates the number of XA-capable engines

Relax the number-of-XA-engines check on recovery. Allow *more*
engines to be present than absolutely necessary, extra engines
cannot affect ACID guarantees of the recovery process.

As a bonus, 10.0->crash->10.1 upgrade won't complain about
wsrep being a new XA storge engine.